@@ -2,6 +2,7 @@
 v4.1.0-git
 ----------
 
+[mms] Add group icon to group contacts in smartmobile browse view.
 [jan] Allow to search all search fields at once in basic searching.
 
 
